# borderless-registry

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: error.rs  extractor.rs  main.rs  models.rs
src/db/: mod.rs
src/db/entities/: author.rs  capabilities.rs  git_info.rs  index.rs  meta.rs  mod.rs  package.rs  package_author.rs  registry.rs  source.rs  url_white_list.rs
src/migrator/: m20250605_000001_create_authors_table.rs  m20250605_000002_create_registries_table.rs  m20250605_000003_create_gitinfo_table.rs  m20250605_000004_ceate_capabilities_table.rs  m20250605_000005_create_url_whitelists_table.rs  m20250605_000006_create_sources_table.rs  m20250605_000007_create_pkgs_table.rs  m20250605_000008_create_package_authors_tables.rs  m20250605_000009_ceate_meta_table.rs  m20250605_000010_create_index_table.rs  mod.rs
