[package]
name = "borderless-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
borderless-kv-store.workspace = true
borderless-pkg.workspace = true
borderless-id-types.workspace = true
borderless-hash.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing = "0.1.41"
tracing-subscriber = "0.3"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.32", features = ["derive"] }
bincode = "1"
serde_json = "1"
sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
sea-orm-migration = { version = "^0.12.0", features = [ "sqlx-sqlite" ] }
base64ct = "=1.6.0"
async-trait = "0.1"
urlencoding = "2.1.3"
url = "2.5.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
