[package]
name = "borderless-registry"
version = "0.1.0"
edition = "2021"
authors = [ "Paul Jökel <paul.jökel@borderless-technologies.com>" ]
repository = "https://github.com/borderless-tech/borderless-registry"
homepage = "https://borderless-technologies.com/"
license-file = "LICENSE"

[dependencies]
borderless-kv-store = "1.0"
borderless-pkg = "0.1.0"
borderless-id-types = "0.1.0"
borderless-hash = "1.0"
anyhow = "1.0"
thiserror = "2.0"
serde = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.32", features = ["derive"] }
bincode = "1"
serde_json = "1"
sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
sea-orm-migration = { version = "^0.12.0", features = [ "sqlx-sqlite" ] }
base64ct = "=1.6.0"
async-trait = "0.1"
urlencoding = "2.1.3"
url = "2.5.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
